# Scry

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: leak-guard.yml  publish-pypi.yml
docs/: landscape.md  quickstart.md
examples/sources/: articles.yaml  hackernews.yaml
scripts/: check_no_private_names.py
src/scry/: __init__.py  auth.py  cli.py  fetchers.py  health.py  mcp.py  models.py  net.py  normalize.py  parsers.py  provenance.py  queue.py  runner.py  scheduler.py  sources.py  validate.py
tests/: test_health.py  test_net.py  test_pipeline.py  test_provenance.py  test_queue.py  test_scheduler.py  test_tos_class.py
