[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scry-kit"
version = "0.2.1"
description = "Provenance-first acquisition engine: fetch, parse, normalize, validate — with immutable, replayable artifacts."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Diwata LLC" }]
keywords = ["scraping", "acquisition", "provenance", "web-archiving", "etl", "mcp", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Intended Audience :: Developers",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
files = ["openpyxl>=3.1", "pdfplumber>=0.11"]
browser = ["playwright>=1.44"]
dev = ["pytest>=8.0"]

[project.scripts]
scry = "scry.cli:main"

[project.urls]
Homepage = "https://github.com/Diwata-Domains/Scry"

[tool.hatch.build.targets.wheel]
packages = ["src/scry"]
